Improve monitor compatibility error, move feedback link into button

BUG=631181
TEST=Plug in unsupported monitor, note that error notification string
has changed to

"This monitor isn't getting along with your Chromebook (the monitor is
not supported)."

Also, "Send a feedback report" should be in a lower button.

Review-Url: https://codereview.chromium.org/2490323003
Cr-Commit-Position: refs/heads/master@{#438212}

Former-commit-id: c6ce8aec3fb0085ba29428df825cc6fee7f79975