ash/display/display_error_observer_chromeos.cc
@@ -4,9 +4,11 @@
 
 #include "ash/display/display_error_observer_chromeos.h"
 
+#include "ash/common/system/chromeos/devicetype_utils.h"
 #include "ash/display/display_util.h"
 #include "base/strings/string_number_conversions.h"
 #include "grit/ash_strings.h"
+#include "ui/base/l10n/l10n_util.h"
 
 namespace ash {
 
@@ -25,10 +27,12 @@ void DisplayErrorObserver::OnDisplayModeChangeFailed(
                << ".";
   }
 
-  ShowDisplayErrorNotification(
+  base::string16 message =
       (new_state == ui::MULTIPLE_DISPLAY_STATE_DUAL_MIRROR)
-          ? IDS_ASH_DISPLAY_FAILURE_ON_MIRRORING
-          : IDS_ASH_DISPLAY_FAILURE_ON_NON_MIRRORING);
+          ? l10n_util::GetStringUTF16(IDS_ASH_DISPLAY_FAILURE_ON_MIRRORING)
+          : ash::SubstituteChromeOSDeviceType(
+                IDS_ASH_DISPLAY_FAILURE_ON_NON_MIRRORING);
+  ShowDisplayErrorNotification(message, true);
 }
 
 }  // namespace ash
